# seamutils

./: .gitignore  LICENSE  README.md  pyproject.toml
src/seamutils/: base.py  bpy_utils.py  config.py  geo_utils.py  graph_utils.py  helpers.py  io_utils.py  np_utils.py  o3d_utils.py  pil_utils.py  scipy_utils.py  seam.py  test.py  torch_utils.py  trimesh_utils.py  typing.py
test/: test_scipy_utils.py
test/data/: one_ring_highlight.ply
