[project]
name = "seamutils"
dynamic = ["version"]                # 版本来自 VCS（git tag）
requires-python = ">=3.10"
description = "Shared utilities for seam processing"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
# dependencies = []                 # 如有运行时依赖，填这里

[project.optional-dependencies]
dev = ["pytest", "ruff"]            # 可选：开发依赖，配合 uv 使用很方便

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"                      # 用 git tag 作为版本号

[tool.hatch.build.targets.wheel]
packages = ["src/seamutils"]        # 与下面源码目录一致
